# painlessMesh

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  autotest.sh  base64.c  base64.h  eashMeshConnection.cpp  easyMesh.cpp  easyMesh.h  easyMeshAP.cpp  easyMeshComm.cpp  easyMeshSTA.cpp  easyMeshSync.cpp  easyMeshSync.h  easyMeshWebServer.cpp  easyMeshWebServer.h  easyMeshWebSocket.cpp  easyMeshWebSocket.h  library.json  library.properties  meshSync.cpp  meshSync.h  meshWebServer.cpp  meshWebServer.h  meshWebSocket.cpp  meshWebSocket.h  painlessMesh.cpp  painlessMesh.h  painlessMesh.ino  painlessMeshConnection.cpp  painlessMeshSTA.cpp  platformio.ini  sha1.c
doxygen/: Doxyfile
examples/advancedExternalBridge/: advancedExternalBridge.ino
examples/basic/: basic.ino
examples/bridge/: bridge.ino  platformio.ini
examples/demoToy/: animations.cpp  animations.h  demoToy.ino
examples/echoNode/: echoNode.ino
examples/externalBridge/: externalBridge.ino
examples/logClient/: logClient.ino  platformio.ini
examples/logServer/: logServer.ino
examples/mqttBridge/: mqttBridge.ino  platformio.ini
examples/namedMesh/: namedMesh.h  namedMesh.ino
examples/ota/: base64.h  ota.ino
examples/sensor/: sensor.ino
examples/startHere/: platformio.ini  startHere.ino
examples/webServer/: platformio.ini  webServer.ino
src/: AsyncTCP.cpp  AsyncTCP.h  SimpleList.h  TaskScheduler.cpp  eashMeshConnection.cpp  easyMesh.cpp  easyMesh.h  easyMeshAP.cpp  easyMeshDebug.cpp  easyMeshSTA.cpp  easyMeshSync.cpp  easyMeshSync.h  esp32wrap.h  espInterface.cpp  espInterface.h  espconn.c  espconn_tcp.c  espconn_udp.c  painlessMesh.cpp  painlessMesh.h  painlessMeshAP.cpp  painlessMeshComm.cpp  painlessMeshConnection.cpp  painlessMeshConnection.h  painlessMeshDebug.cpp  painlessMeshJson.cpp  painlessMeshJson.h  painlessMeshSTA.cpp  painlessMeshSTA.h  painlessMeshSync.cpp  painlessMeshSync.h  painlessScheduler.h  painlessTCP.cpp  painlessTCP.h  sha1.h  wifi.cpp
src/arduino/: wifi.hpp
src/boost/: asynctcp.hpp
src/espconn-esp32/: dhcpserver.c  dhcpserver.h  espconn.c  espconn.h  espconn_tcp.c  espconn_tcp.h  espconn_udp.c  espconn_udp.h  netio.c  ping.c  ping.h  (+1 more)
test/: autotest.sh  network.sh  node.sh  test_main.cpp
(+52 files in other folders)
